--- a/widgets_app/pubspec.yaml
+++ b/widgets_app/pubspec.yaml
@@ -15,6 +15,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_riverpod: ^2.5.1
 
 flutter:
   uses-material-design: true
